@@ -1,3 +1,18 @@
+/*
+ * Copyright 2026 Fedor Malyshev
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.jquic.quic.buffers;
 
 import org.junit.jupiter.api.Test;
@@ -10,6 +25,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@SuppressWarnings("resource")
 public class SlicingOutputStreamTest {
 
     static class TestPoolBuffer implements PoolBuffer {
@@ -57,7 +73,7 @@ public class SlicingOutputStreamTest {
         out.write(data1);
 
         assertEquals(1, consumedChunks.size());
-        assertArrayEquals(data1, consumedChunks.get(0));
+        assertArrayEquals(data1, consumedChunks.getFirst());
         assertEquals(10, out.getPos());
 
         // Logical offset is 10. Gap of 5 was added.
@@ -194,7 +210,7 @@ public class SlicingOutputStreamTest {
         // Write 10 bytes -> triggers callback (size 10), nextChunkSize becomes 20
         out.write(new byte[10]);
         assertEquals(1, acceptedSizes.size());
-        assertEquals(10, acceptedSizes.get(0));
+        assertEquals(10, acceptedSizes.getFirst());
 
         // Write 15 bytes -> no trigger (needs 20)
         out.write(new byte[15]);
